--- a/MySQLFun/MySQLFun.csproj
+++ b/MySQLFun/MySQLFun.csproj
@@ -15,9 +15,13 @@
     <Folder Include="Models\" />
     <Folder Include="Pages\" />
     <Folder Include="Pages\Admin\" />
+    <Folder Include="wwwroot\img\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.6" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\img\" />
   </ItemGroup>
 </Project>
